--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,15 @@ module_name_repetitions = "allow"
 missing_errors_doc = "allow"
 missing_panics_doc = "allow"
 must_use_candidate = "allow"
+cast_precision_loss = "allow"
+cast_possible_truncation = "allow"
+cast_sign_loss = "allow"
+doc_markdown = "allow"
+unused_async = "allow"
+too_many_lines = "allow"
+struct_excessive_bools = "allow"
+needless_pass_by_value = "allow"
+single_match_else = "allow"
+derivable_impls = "allow"
+format_push_string = "allow"
+map_unwrap_or = "allow"
