--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,8 @@ tokio-stream = "0.1"
 
 [dev-dependencies]
 reqwest = { version = "0.12", features = ["json"] }
+http-body-util = "0.1"
+tower = { version = "0.5", features = ["util"] }
 
 [lints.rust]
 unsafe_code = "deny"
